--- a/style.css
+++ b/style.css
@@ -2,7 +2,47 @@
 @tailwind components;
 @tailwind utilities;
 
+body {
+  overflow: hidden;
+}
+
+#app {
+  background-image: url(/images/wallpaper.jpg);
+}
+
+
+#window {
+  scrollbar-color: #c8c8c8 #f5f5f5;
+  scrollbar-width: thin;
+}
+
+#window::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+}
+
+#window::-webkit-scrollbar-thumb {
+  background-color: #c8c8c8;
+  border-radius: 10px;
+}
+
+#window::-webkit-scrollbar-thumb:hover {
+  background-color: #a6a6a6;
+}
+
+#window::-webkit-scrollbar-corner {
+  background-color: #f5f5f5;
+}
+
+a {
+  text-decoration: underline;
+  color: rgb(63, 120, 255);
+}
 
 .animate-pulse {
   animation: pulse 0.6s cubic-bezier(0.4, 0, 0.6, 1) infinite;
+}
+
+.red-text{
+  color: red;
 }
