--- a/style.css
+++ b/style.css
@@ -2,19 +2,33 @@
 @tailwind components;
 @tailwind utilities;
 
+*{
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+
 body {
   overflow: hidden;
 }
 
 #app {
-  background-image: url(/images/wallpaper.jpg);
+  background-image: url(/images/wallpaper.webp);
+  background-repeat: no-repeat;
+  background-size: cover;
 }
-
 
 #window {
   scrollbar-color: #c8c8c8 #f5f5f5;
   scrollbar-width: thin;
 }
+
+/* typewritter effect */
+#typewriter {
+  height: 450px !important; /* Set a fixed height for the txtElement */
+  overflow-y: scroll; /* Show the scrollbar */
+}
+
 
 #window::-webkit-scrollbar {
   width: 8px;
@@ -34,6 +48,8 @@ body {
   background-color: #f5f5f5;
 }
 
+
+/* setting styles for a tag, they are used for javascript links */
 a {
   text-decoration: underline;
   color: rgb(63, 120, 255);
