--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body {
   background-size: cover;
 }
 
-#window {
+#content {
   scrollbar-color: #c8c8c8 #f5f5f5;
   scrollbar-width: thin;
 }
@@ -30,21 +30,21 @@ body {
 }
 
 
-#window::-webkit-scrollbar {
+#content::-webkit-scrollbar {
   width: 8px;
   height: 8px;
 }
 
-#window::-webkit-scrollbar-thumb {
+#content::-webkit-scrollbar-thumb {
   background-color: #c8c8c8;
   border-radius: 10px;
 }
 
-#window::-webkit-scrollbar-thumb:hover {
+#content::-webkit-scrollbar-thumb:hover {
   background-color: #a6a6a6;
 }
 
-#window::-webkit-scrollbar-corner {
+#content::-webkit-scrollbar-corner {
   background-color: #f5f5f5;
 }
 
