--- a/style.css
+++ b/style.css
@@ -2,14 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
+:root {
+  --topbar-height: 3rem; /* adjust the value as needed */
+}
+
+
 *{
   box-sizing: border-box;
   padding: 0;
   margin: 0;
-}
-
-body {
-  overflow: hidden;
 }
 
 #app {
@@ -21,6 +22,8 @@ body {
 #content {
   scrollbar-color: #c8c8c8 #f5f5f5;
   scrollbar-width: thin;
+  padding-top: calc(var(--topbar-height) + 1px);
+
 }
 
 /* typewritter effect */
