--- a/style.css
+++ b/style.css
@@ -13,9 +13,9 @@
   margin: 0;
 }
 
-/* body {
-  overflow: hidden;
-} */
+html, body {
+  height: 100%;
+}
 
 #app {
   background-image: url(/images/wallpaper.webp);
